src/objects/Revision_legal__c.object
<CustomObject>
    <description>Permite identificar los registros de Revisión legal generados desde las solicitudes de créditos</description>
    <fields>
        <fullName>Acreedor_Hipoteca__c</fullName>
        <inlineHelpText>Credifimilia Compañia de Financiamiento  S.A,- Credifamilia CF - NIT:900406472-1</inlineHelpText>
        <label>Acreedor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acreedor__c</fullName>
        <inlineHelpText>Credifamilia Compañia de Financiamiento S.A - Credifamilia CF - NIT: 900406472-1</inlineHelpText>
        <label>Acreedor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anotacion_que_deba_ser_cancelada__c</fullName>
        <label>Anotación que deba ser cancelada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cedula_catastral__c</fullName>
        <inlineHelpText>Se verifica contra el CEC del IDU</inlineHelpText>
        <label>Cédula catastral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circulo_de_notaria__c</fullName>
        <label>Círculo de notaría</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abejorral</fullName>
                </value>
                <value>
                    <fullName>Ábrego</fullName>
                </value>
                <value>
                    <fullName>Abriaquí</fullName>
                </value>
                <value>
                    <fullName>Acacías</fullName>
                </value>
                <value>
                    <fullName>Acandí</fullName>
                </value>
                <value>
                    <fullName>Acevedo</fullName>
                </value>
                <value>
                    <fullName>Achí</fullName>
                </value>
                <value>
                    <fullName>Agrado</fullName>
                </value>
                <value>
                    <fullName>Agua De Dios</fullName>
                </value>
                <value>
                    <fullName>Aguachica</fullName>
                </value>
                <value>
                    <fullName>Aguada</fullName>
                </value>
                <value>
                    <fullName>Aguazul</fullName>
                </value>
                <value>
                    <fullName>Agustín Codazzi</fullName>
                </value>
                <value>
                    <fullName>Aipe</fullName>
                </value>
                <value>
                    <fullName>Albán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alcalá</fullName>
                </value>
                <value>
                    <fullName>Aldana</fullName>
                </value>
                <value>
                    <fullName>Alejandría</fullName>
                </value>
                <value>
                    <fullName>Algarrobo</fullName>
                </value>
                <value>
                    <fullName>Algeciras</fullName>
                </value>
                <value>
                    <fullName>Almaguer</fullName>
                </value>
                <value>
                    <fullName>Almeida</fullName>
                </value>
                <value>
                    <fullName>Altos Del Rosario</fullName>
                </value>
                <value>
                    <fullName>Alvarado</fullName>
                </value>
                <value>
                    <fullName>Amagá</fullName>
                </value>
                <value>
                    <fullName>Amalfi</fullName>
                </value>
                <value>
                    <fullName>Ambalema</fullName>
                </value>
                <value>
                    <fullName>Anapoima</fullName>
                </value>
                <value>
                    <fullName>Ancuyá</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Cliente_deudor__r.FirstName&amp;&apos; &apos;&amp;Solicitud_de_credito_RL__r.Cliente_deudor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente deudor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_1__r.FirstName&amp;&apos; &apos;&amp;Solicitud_de_credito_RL__r.Codeudor_1__r.MiddleName&amp;&apos;  &apos;&amp;Solicitud_de_credito_RL__r.Codeudor_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_2__r.FirstName&amp;&apos;  &apos;&amp;Solicitud_de_credito_RL__r.Codeudor_1__r.MiddleName&amp;&apos; &apos;&amp;Solicitud_de_credito_RL__r.Codeudor_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_3__r.FirstName&amp;&apos;&apos;&amp;Solicitud_de_credito_RL__r.Codeudor_3__r.MiddleName&amp;&apos;&apos;&amp;Solicitud_de_credito_RL__r.Codeudor_3__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprador_s__c</fullName>
        <inlineHelpText>A quien o quienes se les aprobó el crédito de acuerdo con la carta de aprobación</inlineHelpText>
        <label>Comprador(es)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condicion_decimo_quinta__c</fullName>
        <inlineHelpText>Verificar nombre y cédula del representante legal,razón social y NIT de credifamilia</inlineHelpText>
        <label>Condición décimo quinta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Constructora__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constructora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direcci_n_del_inmueble__c</fullName>
        <inlineHelpText>Se verifica contra el CEC que da el IDU</inlineHelpText>
        <label>Dirección del inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_del_inmueble_RL__c</fullName>
        <label>Dirección del inmueble</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_del_inmueble__c</fullName>
        <inlineHelpText>Sé verifica contra el CEC que da el IDU</inlineHelpText>
        <label>Dirección del inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_carta_definitiva_RL__c</fullName>
        <inlineHelpText>No puede superar 6 meses</inlineHelpText>
        <label>Fecha carta definitiva</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_carta_definitiva__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Fecha_carta_definitiva_generada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha carta definitiva</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_escritura__c</fullName>
        <label>Fecha de escritura</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_revision_legal__c</fullName>
        <label>Fecha revisión legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formato_de_calificacion__c</fullName>
        <label>Formato de calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hipotecante__c</fullName>
        <inlineHelpText>A quien o quienes se les aprobó el crédito, verificar nombres y cédulas, debe coincidir con el cliente de la carta de aprobación y con el comprador de la sección anterior</inlineHelpText>
        <label>Hipotecante</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_de_contrato__c</fullName>
        <inlineHelpText>Debe coincidir con el de la Titularizadora Colombiana</inlineHelpText>
        <label>Modelo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_mero_de_documento_codeudor_1__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_1__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mero_de_matr_cula_inmobiliaria__c</fullName>
        <label>Número de matrícula inmobiliaria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_proyecto_edificio_Hipoteca__c</fullName>
        <label>Nombre del proyecto ó edificio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_del_proyecto_edificio__c</fullName>
        <label>Nombre del proyecto ó edificio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_s_de_lo_s_clientes__c</fullName>
        <label>Nombre(s) del lo(s) cliente(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_y_cedula_del_representante_legal__c</fullName>
        <label>Nombre y cédula del representante legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_cedula_catastral_RL_c__c</fullName>
        <label>Número cédula catastral</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_cedula_catastral__c</fullName>
        <label>Número cédula catastral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_RL__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Cliente_deudor__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <label>Número de documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_2__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_2__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_3__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Codeudor_3__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_escritura__c</fullName>
        <label>Número de escritura</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_escritura_publica__c</fullName>
        <label>Número de escritura pública</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_matricula_inmobiliaria_CTYL__c</fullName>
        <label>Número de matrícula inmobiliaria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_matricula_inmobiliaria_RL__c</fullName>
        <inlineHelpText>Se verifica contra el certificado del estado de cuenta (CEC) del IDU</inlineHelpText>
        <label>Número de matrícula inmobiliaria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_matricula_inmobiliaria__c</fullName>
        <inlineHelpText>Se verifica contra el CEC que da el IDU</inlineHelpText>
        <label>Número de matrícula inmobiliaria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_notaria__c</fullName>
        <label>Número de notaría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obervaciones__c</fullName>
        <label>Obervaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plazo_credito_revision_legal__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Plazo_credito__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plazo crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Proyecto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raz_n_social_y_NIT_de_Credfiamilia__c</fullName>
        <label>Razón social y NIT de Credfiamilia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revisado_por__c</fullName>
        <label>Revisado por</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angela Riaño</fullName>
                </value>
                <value>
                    <fullName>Natalia Tangarife</fullName>
                </value>
                <value>
                    <fullName>Maria Parra</fullName>
                </value>
                <value>
                    <fullName>Oscar Florez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion_RL__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Sistema_amortizacion_aprobado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sistema de amortización</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion__c</fullName>
        <inlineHelpText>Debe coincidir exactamente con la carta de aprobación</inlineHelpText>
        <label>Sistema de amortización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito_RL__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Revisiónes legales</relationshipLabel>
        <relationshipName>Revisi_nes_legales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Tipo_de_escrituras__c</fullName>
        <label>Tipo de escrituras</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compraventa e hipoteca</fullName>
                </value>
                <value>
                    <fullName>Hipoteca</fullName>
                </value>
                <value>
                    <fullName>Ratificación</fullName>
                </value>
                <value>
                    <fullName>Aclaración</fullName>
                </value>
                <value>
                    <fullName>Cancelación hipoteca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_aprobado__c</fullName>
        <label>Valor aprobado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_de_la_compraventa__c</fullName>
        <label>Valor de la compraventa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_RL__c</fullName>
        <formula>Solicitud_de_credito_RL__r.Monto_prestamo_aprobado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor del crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_del_inmueble_segun_el_avaluo__c</fullName>
        <label>Valor del inmueble según el avalúo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendedor__c</fullName>
        <inlineHelpText>Será la Constructora,Caja de Compensación ó Fideicomiso</inlineHelpText>
        <label>Vendedor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revisión legal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisiónes legales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>